--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-vue-typescript-starter",
+  "name": "typing-pokepractice",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@imgly/background-removal": "^1.4.0",
+    "js-confetti": "^0.12.0",
     "pokeapi-js-wrapper": "^1.2.3",
+    "tailwindcss": "^3.4.1",
     "vue": "^3.4.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
     "typescript": "^5.2.2",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
